--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root {
   --cellsize: 150px;
-  --blue: cornflowerblue;
+  --blue: steelblue;
 }
 * {
   margin: 0;
@@ -9,7 +9,7 @@
 }
 body {
   min-height: 100vh;
-  background-color: honeydew;
+  background-color: lightskyblue;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
@@ -30,4 +30,10 @@ h1 {
   height: var(--cellsize);
   border: 4px solid var(--blue);
   background-color: whitesmoke;
+  color: black;
+  font-size: 6rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
 }
