--- a/style.css
+++ b/style.css
@@ -37,3 +37,20 @@ h1 {
   justify-content: center;
   overflow: hidden;
 }
+.gameover {
+  position: relative;
+}
+.gameover::after {
+  content: attr(data-message);
+  font-size: 4rem;
+  font-weight: bold;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.7);
+  outline: 4px solid rgba(0, 0, 0, 0.7);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
