--- a/style.css
+++ b/style.css
@@ -43,21 +43,21 @@ h1 {
   font-size: 4rem;
   font-weight: bold;
   color: white;
-  background-color: rgba(0, 0, 0, 0.7);
-  outline: 4px solid rgba(0, 0, 0, 0.7);
+  background-color: rgba(0, 0, 0, 0.8);
+  outline: 4px solid rgba(0, 0, 0, 0.8);
   position: absolute;
   width: 100%;
   height: 100%;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
+  line-height: 3;
 }
 .gameboard button {
   position: absolute;
   z-index: 1;
-  align-self: flex-start;
+  align-self: center;
   justify-self: center;
-  margin-top: 60px;
   padding: 10px 20px;
   font-size: 1rem;
   cursor: pointer;
