--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ h1 {
   margin: 40px auto;
   position: relative;
 }
-.gameboard > div {
+.gameboard > div:not(.gameover) {
   height: var(--cellsize);
   border: 4px solid var(--blue);
   background-color: whitesmoke;
@@ -38,9 +38,9 @@ h1 {
   justify-content: center;
   overflow: hidden;
 }
-.gameover::after {
-  content: attr(data-message);
-  font-size: 4rem;
+.gameover {
+  font-size: 3rem;
+  line-height: 1;
   font-weight: bold;
   color: white;
   background-color: rgba(0, 0, 0, 0.8);
@@ -49,16 +49,14 @@ h1 {
   width: 100%;
   height: 100%;
   display: flex;
-  align-items: flex-start;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
-  line-height: 3;
+  gap: 40px;
 }
 .gameboard button {
-  position: absolute;
-  z-index: 1;
-  align-self: center;
-  justify-self: center;
   padding: 10px 20px;
+  margin-bottom: 15px;
   font-size: 1rem;
   cursor: pointer;
   background-color: white;
