--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-  --cellsize: 150px;
+  --cellsize: 100px;
   --blue: steelblue;
 }
 * {
@@ -18,13 +18,16 @@ h1 {
   margin: 20px 0;
   font-size: 3rem;
 }
+main {
+  /* display: grid; */
+}
 .gameboard {
   display: grid;
   grid-template-columns: repeat(3, var(--cellsize));
   width: calc(3 * var(--cellsize));
   outline: 4px solid var(--blue);
   justify-content: center;
-  margin: 40px auto;
+  margin: 0 auto;
   position: relative;
 }
 .gameboard > div:not(.gameover) {
@@ -32,29 +35,47 @@ h1 {
   border: 4px solid var(--blue);
   background-color: whitesmoke;
   color: black;
-  font-size: 6rem;
+  font-size: 5rem;
   display: flex;
   align-items: center;
   justify-content: center;
   overflow: hidden;
 }
-.gameover {
-  font-size: 3rem;
-  line-height: 1;
-  font-weight: bold;
+.overlay {
   color: white;
   background-color: rgba(0, 0, 0, 0.8);
   outline: 4px solid rgba(0, 0, 0, 0.8);
-  position: absolute;
-  width: 100%;
-  height: 100%;
+  position: relative;
+  width: calc(3 * var(--cellsize));
+  height: calc(3 * var(--cellsize));
+  margin: calc(-3 * var(--cellsize)) auto 0;
+}
+.user-entry {
+  padding: 40px;
+  /* display: none; */
+}
+.user-entry form {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+.user-entry > form > div > .radios {
+  display: grid;
+  grid-template-columns: auto auto;
+  justify-content: start;
+  grid-gap: 15px;
+}
+.gameover {
+  font-size: 2rem;
+  line-height: 1;
+  font-weight: bold;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   gap: 40px;
 }
-.gameboard button {
+.gameover button {
   padding: 10px 20px;
   margin-bottom: 15px;
   font-size: 1rem;
@@ -64,6 +85,6 @@ h1 {
   outline: none;
   border-radius: 5px;
 }
-.gameboard button:hover {
+.gameover button:hover {
   background-color: lightskyblue;
 }
