--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 :root {
   --cellsize: 100px;
   --blue: steelblue;
+  --cell-corners: 10px;
 }
 * {
   margin: 0;
@@ -25,7 +26,6 @@ h1 {
   justify-content: center;
   margin: 0 auto;
   position: relative;
-  border-radius: 15px;
 }
 .gameboard > div:not(.gameover) {
   height: var(--cellsize);
@@ -37,7 +37,7 @@ h1 {
   align-items: center;
   justify-content: center;
   overflow: hidden;
-  border-radius: 15px;
+  border-radius: var(--cell-corners);
 }
 .overlay {
   color: white;
@@ -47,11 +47,11 @@ h1 {
   width: calc(3 * var(--cellsize));
   height: calc(3 * var(--cellsize));
   margin: calc(-3 * var(--cellsize)) auto 0;
-  border-radius: 15px;
+  border-radius: var(--cell-corners);
 }
 .user-entry {
   padding: 30px;
-  display: none;
+  /* display: none; */
 }
 .user-entry form {
   height: 100%;
