--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ h1 {
   margin: 0 auto;
   position: relative;
 }
-.gameboard > div:not(.gameover) {
+.gameboard > div:not(.gameover):not(.turn) {
   height: var(--cellsize);
   border: 4px solid var(--blue);
   background-color: whitesmoke;
@@ -92,6 +92,24 @@ h1 {
 .user-entry > form .weapon > .weapon-btn.selected {
   background-color: lightskyblue;
   color: black;
+}
+.turn {
+  height: 24px;
+  width: calc(2 * var(--cellsize));
+  position: absolute;
+  top: -12px;
+  right: calc(0.5 * var(--cellsize));
+  background-color: white;
+  border-radius: 6px;
+  background-color: whitesmoke;
+  border: 4px solid var(--blue);
+  color: black;
+  text-align: center;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 1px;
+  font-size: 0.7rem;
 }
 .gameover {
   font-size: 2rem;
