--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 }
 h1 {
   text-align: center;
-  margin: 20px 0;
+  margin: 20px 0 30px;
   font-size: 3rem;
 }
 .gameboard {
@@ -94,22 +94,20 @@ h1 {
   color: black;
 }
 .turn {
-  height: 24px;
+  height: 30px;
   width: calc(2 * var(--cellsize));
   position: absolute;
-  top: -12px;
+  top: -20px;
   right: calc(0.5 * var(--cellsize));
-  background-color: white;
   border-radius: 6px;
-  background-color: whitesmoke;
-  border: 4px solid var(--blue);
-  color: black;
-  text-align: center;
+  background-color: var(--blue);
+  /* border: 4px solid var(--blue); */
+  color: white;
   display: none;
-  align-items: center;
   justify-content: center;
-  padding-bottom: 1px;
+  padding-top: 4px;
   font-size: 0.7rem;
+  z-index: -1;
 }
 .gameover {
   font-size: 1.5rem;
